FrontEnd/assets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

body {
	line-height: 1;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/** end reset css**/

@keyframes galleryFadeIn {
	0% { opacity: 0; }
	25% { opacity: 0; }
	100% { opacity: 1; }
}

:root {
	--portfolio-colors-white: #FFF;
	--portfolio-colors-green: #1D6154;
	--portfolio-colors-darkgreen: #0E2F28;
	--portfolio-colors-brown: #B1663C;
	--portfolio-colors-red: #611d1d;
	--portfolio-colors-darkgray: #333;

	--portfolio-fw-bold: 700;
	--portfolio-fw-semibold: 500;
	--portfolio-fw-regular: 400;

	--portfolio-page-margin: 50px;

	--portfolio-navbar-item-hover-fw: var(--portfolio-fw-bold);

	--portfolio-chart-button-font-color: var(--portfolio-colors-white);
	--portfolio-chart-button-bg-color: var(--portfolio-colors-green);
	--portfolio-chart-button-bg-color-hover: var(--portfolio-colors-darkgreen);
	--portfolio-chart-button-default-font-weight: var(--portfolio-fw-bold);

	--portfolio-chart-active-filter-button-bg-hover: var(--portfolio-colors-green);
	--portfolio-chart-active-filter-button-bg-color: var(--portfolio-colors-white);
	--portfolio-chart-inactive-filter-button-bg: var(--portfolio-colors-white);
	--portfolio-chart-inactive-filter-button-bg-hover: var(--portfolio-colors-green);
	--portfolio-chart-inactive-filter-button-font-color: var(--portfolio-colors-green);

	--portfolio-chart-error-box-bg-color: var(--portfolio-colors-red);
	--portfolio-chart-box-bg-color: var(--portfolio-colors-darkgray);

	--portfolio-title-color: var(--portfolio-colors-brown);
	--portfolio-chart-title-default-font-weight: var(--portfolio-fw-bold);

	--portfolio-chart-subtitle-font-color: var(--portfolio-colors-green);
}

body {
	max-width: 1140px;
	min-height: 100vh;
	margin: auto;
	font-family: 'Work Sans', 'Syne', sans-serif;
	font-size: .874em;
	display: flex;
	flex-direction: column;
}

section {
	margin: var(--portfolio-page-margin) 0;
}

h1 {
	display: flex;
	flex-direction: column;
	font-family: 'Syne';
	font-size: 1.58em;
	font-weight: 800;
	color: var(--portfolio-title-color);
	line-height: 1em;
}

h1>span {
	position: relative;
	text-transform: uppercase;
	font-family: 'Work Sans';
	font-weight: var(--portfolio-fw-regular);
	font-size: .45em;
	letter-spacing: .1em;
	transform: scale(.92, 1);
	left: -3.5%;
}

h2 {
	font-size: 2em;
}

h2, h3, h4, h5, h6 {
	font-family: 'Syne';
	font-weight: var(--portfolio-chart-title-default-font-weight);
	color: var(--portfolio-chart-inactive-filter-button-font-color);
}

.introduction {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: calc(var(--portfolio-page-margin) * 2.5);
	margin-top: calc(var(--portfolio-page-margin) * 1.5);
}

.introduction figure {
	flex-basis: 53%;
}

.introduction img {
	display: block;
	height: auto;
	width: 94.5%;
}

.introduction article {
	flex-basis: 47%;
	max-width: 42.8%;
}

.introduction h2 {
	margin-bottom: 1em;
}

.introduction p {
	margin-bottom: .5em;
}

.main {
	width: 83%;
	margin: auto;
}

.portfolio h2 {
	text-align: center;
	margin-bottom: 1em;
}

.gallery {
	width: 100%;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-column-gap: .9rem;
	grid-row-gap: 20px;
}

.gallery figure {
	margin: auto;
}

.form {
	width: 50%;
	margin: auto;
}

.form>* {
	text-align: center;
}

.form h2 {
	margin-bottom: 20px;
}

.form form {
	text-align: left;
	display: flex;
	flex-direction: column;
}

.form input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, .09);
}

.form label {
	margin: 3em 0 .5em 0;
}

.form textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, .09);
}

.is-btn {
	--_background-color: var(--portfolio-chart-button-bg-color);
	font-family: 'Syne';
	font-weight: var(--portfolio-chart-button-default-font-weight);
	color: var(--portfolio-chart-button-font-color);
	background-color: var(--_background-color);
	border-color: var(--_background-color);
	margin: 2em auto;
	width: 180px;
	text-align: center;
	margin-top: 35px;
	border-radius: 60px;
	border: none;
	padding: 10px;
}

.is-btn:hover {
	--_background-color: var(--portfolio-chart-button-bg-color-hover);
	cursor: pointer;
	color: var(--portfolio-chart-button-font-color);
}

footer nav ul {
	display: flex;
	justify-content: flex-end;
	margin: 2em;
}

/** Filters **/
.filter-by-category-component {
	display: flex;
	justify-content: center;
	gap: 0 1em;
	margin: 4em 0;
}

.filter-btn {
	border: 1px solid var(--portfolio-chart-inactive-filter-button-font-color);
	font-size: 1em;
	margin: 0;

	color: var(--portfolio-chart-inactive-filter-button-font-color);
	background-color: var(--portfolio-chart-inactive-filter-button-bg);
	padding: 8px 1%;
	min-width: 100px;
}

.filter-btn:hover {
	color: var(--portfolio-chart-button-font-color);
	background-color: var(--portfolio-chart-button-bg-color-hover);
	border-color: var(--portfolio-chart-button-bg-color-hover);
}

.filter-btn.is-active {
	background-color: var(--portfolio-chart-active-filter-button-bg-hover);
	border-color: var(--portfolio-chart-active-filter-button-bg-hover);
	color: var(--portfolio-chart-active-filter-button-bg-color);
}

/** Boxes **/
.prevent-select {
	user-select: none;
}

.is-box {
	background-color: var(--portfolio-chart-buttons-font-color);
	color: var(--portfolio-chart-button-bg-color);
	font-weight: var(--portfolio-fw-semibold);
	padding: 15px;
	border-radius: 15px;
	max-width: 45vw;
}

.is-box.error-box {
	background-color: var(--portfolio-chart-error-box-bg-color);
	color: var(--portfolio-chart-button-bg-color);
}

.gallery.failed-to-fetch {
	display: flex;
	justify-content: center;
}

/* Toasts */
.toasts-component>.is-toast:nth-child(1) { --nth-child: 1; }
.toasts-component>.is-toast:nth-child(2) { --nth-child: 2; }
.toasts-component>.is-toast:nth-child(3) { --nth-child: 3; }
.toasts-component>.is-toast:nth-child(4) { --nth-child: 4; }
.toasts-component>.is-toast:nth-child(n + 5) { --nth-child: 5; }

.toasts-component {
	display: flex;
	flex-direction: column;
	align-items: center;
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
}

.is-toast {
	--_default-min-width: 250px;
	--_delta: 50px;
	--_fadein-duration: .5s;
	--_fadeout-duration: 1s;
	--_movein-duration: .7s;
	--_moveout-duration: 1s;
	opacity: 0;
	margin: auto;
	font-weight: var(--portfolio-fw-semibold);
	min-width: var(--_default-min-width);
	background-color: var(--portfolio-chart-box-bg-color);
	color: var(--portfolio-chart-button-font-color);
	text-align: center;
	border-radius: 2px;
	padding: 16px;
	z-index: 1;
	bottom: 0;
	position: fixed;
	transition: bottom var(--_movein-duration), opacity var(--_fadeout-duration);
}

.is-toast.show {
	opacity: 1;
	bottom: calc(var(--_delta) * var(--nth-child));
	transition: bottom var(--_moveout-duration), opacity var(--_fadein-duration);
}

.is-toast.error-box {
	background-color: var(--portfolio-chart-error-box-bg-color);
}

.gallery>.gallery-figure:nth-child(1) { --nth-child: 1; }
.gallery>.gallery-figure:nth-child(2) { --nth-child: 2; }
.gallery>.gallery-figure:nth-child(3) { --nth-child: 3; }
.gallery>.gallery-figure:nth-child(4) { --nth-child: 4; }
.gallery>.gallery-figure:nth-child(n + 5) { --nth-child: 5; }

.gallery>.gallery-figure {
	animation: galleryFadeIn calc(.4s * var(--nth-child)) ease-in;
}

.gallery-figure img {
	height: 407px;
	width: 305px;
	object-fit: cover;
	margin-bottom: .5em;
}

.forgotten-password {
	color: inherit;
	font-weight: var(--portfolio-fw-semibold);
}

.footer {
	flex: 100%;
	display: flex;
	align-items: flex-end;
	justify-content: flex-end;
}

.reset-text-decoration {
	text-decoration: none;
	color: inherit;
}

.form input.is-narrow {
	height: 35px;
	font-size: 1em;
}

/** Navbar **/
.header {
	--_margin-delta: 22px;
	display: flex;
	justify-content: space-between;
	margin: var(--portfolio-page-margin) auto;
	min-width: 1150px;
}

.navbar-menu-elements>* {
	padding: 0 10px;
	font-size: 1.2em;
}

a:hover {
	color: var(--portfolio-title-color);
}

.navbar-item:hover {
	font-weight: var(--portfolio-navbar-item-hover-fw);
	color: inherit;
}

.navbar-menu {
	display: flex;
	align-items: center;
	height: 42px;
}

.navbar-menu-elements .navbar-img {
	--_height: 21px;
	position: relative;
	height: var(--_height);
	top: calc(var(--_height) * .01);
}

.navbar-menu-elements {
	display: flex;
	align-items: center;
	list-style-type: none;
	justify-content: space-between;
	width: 320px;
}

.login h2 {
	margin-top: 80px;
}

body *:not(.header) {
	animation: galleryFadeIn .7s ease-in-out;
}

.header {
	animation: galleryFadeIn .4s ease-in-out;
}

#login-error {
	width: 320px;
	margin: auto;
}

